--- a/SignalRWebUI/Views/SignalRDefault/Index.cshtml
+++ b/SignalRWebUI/Views/SignalRDefault/Index.cshtml
@@ -12,8 +12,6 @@
 <script src="~/microsoft/signalr/dist/browser/signalr.min.js"></script>
 
 
-    
-
 <div class="content">
     <div class="container-fluid">
         <div class="row">
@@ -25,7 +23,7 @@
 
                             connection.start().then(()=>{
                                 $("#connstatus").text(connection.state);
-                               connection.invoke("SendCategoryCount");
+                            connection.invoke("SendStatistic");
                             }).catch((err) => {console.log(err)});
 
                             connection.on("ReceiveCategoryCount",(value)=>
