--- a/SignalRWebUI/Views/SignalRDefault/Index2.cshtml
+++ b/SignalRWebUI/Views/SignalRDefault/Index2.cshtml
@@ -5,12 +5,11 @@
 }
 
 <h1>Index</h1>
+
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
 <script src="~/microsoft/signalr/dist/browser/signalr.min.js"></script>
-
-
 
 
 <div class="content">
@@ -25,7 +24,7 @@
                             connection.start().then(()=>{
                                 $("#connstatus").text(connection.state);
                                 setInterval(() => {
-                                    connection.invoke("SendCategoryCount");
+                                connection.invoke("SendStatistic");
                                 }, 1000);
                               
                             }).catch((err) => {console.log(err)});
