--- a/SignalRWebUI/Views/Booking/Index.cshtml
+++ b/SignalRWebUI/Views/Booking/Index.cshtml
@@ -1,61 +1,88 @@
 ﻿@model List<ResultBookingDto>
 @{
-	ViewData["Title"] = "Index";
-	Layout = "~/Views/AdminLayout/Index.cshtml";
-	int count = 0;
+    ViewData["Title"] = "Index";
+    Layout = "~/Views/AdminLayout/Index.cshtml";
+    int count = 0;
 }
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script src="~/js/site.js" asp-append-version="true"></script>
+<script src="~/microsoft/signalr/dist/browser/signalr.min.js"></script>
+
 
 <div class="content">
-	<div class="container-fluid">
-		<h4 class="page-title">Rezervasyon İşlemleri</h4>
-		<div class="row">
-			<div class="col-md-12">
-				<div class="card">
-					<div class="card-header">
-						<div class="card-title">Kategori Listesi</div>
-					</div>
-					<div class="card-body">
-						<div class="card-sub">
-							Kategori ile ilgili işlemleri aşağıdan gerçekleştirebilirsiniz.
-						</div>
-						<table class="table mt-3">
-							<thead>
-								<tr>
-									<th scope="col">#</th>
-									<th scope="col">Ad Soyad</th>
-									<th scope="col">Telefon</th>
-									<th scope="col">Kişi Sayısı</th>
-									<th scope="col">Rezervasyon Durumu</th>
-									<th scope="col">Sil</th>
-									<th scope="col">Güncelle</th>
+    <div class="container-fluid">
 
-								</tr>
-							</thead>
-							<tbody>
-								@foreach (var item in Model)
-								{
-									count++;
-									<tr>
-										<td>@count</td>
-										<td>@item.Name</td>
-										<td>@item.Phone</td>
-										<td>@item.PersonCount</td>
-										<td>Rezervasyon Alındı</td>
-										<td><a href="/Booking/DeleteBooking/@item.BookingID" class="btn btn-outline-danger">Sil</a></td>
-										<td><a href="/Booking/UpdateBooking/@item.BookingID" class="btn btn-outline-success">Güncelle</a></td>
-									</tr>
-								}
+        <script type="text/javascript">
+            $(document).ready(() => {
+                var connection = new signalR.HubConnectionBuilder().withUrl("https://localhost:7037/SignalRHub").build();
+                $("#connstatus").text(connection.state);
 
+                connection.start().then(() => {
+                    $("#connstatus").text(connection.state);
+                    setInterval(() => {
+                        connection.invoke("GetBookingList");
 
-							</tbody>
-						</table>
-						<a href="/Booking/CreateBooking/" class="btn btn-outline-primary">Yeni Rezervasyon Girişi</a>
-					</div>
-				</div>
+                    }, 5000);
 
-			</div>
+                }).catch((err) => { console.log(err) });
 
-		</div>
-	</div>
+                connection.on("ReceiveBookingList", (value) => {
+                    console.log(value);
+                    let tablehtml = `<table class=table mt-3><thead>
+                                                 <tr>
+                                                 <th scope="col">#</th>
+                                                 <th scope="col">Ad Soyad</th>
+                                                 <th scope="col">Telefon</th>
+                                                 <th scope="col">Kişi Sayısı</th>
+                                                 <th scope="col">Rezervasyon Durumu</th>
+                                                 <th scope="col">Sil</th>
+                                                 <th scope="col">Güncelle</th>
+                                                 <th scope="col">Onayla</th>
+                                                 <th scope="col">İptal Et</th>
+                                                 </tr>
+                                                 </thead>
+                                                 <tbody>`
+                    $.each(value, (index, item) => {
+                        tablehtml += `<tr>
+                                                <th>${index + 1}</th>
+                                                <td>${item.name}</td>
+                                                <td>${item.phone}</td>
+                                                <td>${item.personCount}</td>
+                                                <td>${item.description}</td>
+                                                <td><a href="/Booking/DeleteBooking/${item.bookingID}" class="btn btn-outline-danger">Sil</a></td>
+                                                <td><a href="/Booking/UpdateBooking/${item.bookingID}" class="btn btn-outline-success">Güncelle</a></td>
+                                                <td><a href="/Booking/BookingStatusApproved/${item.bookingID}" class="btn btn-outline-info">Onayla</a></td>
+                                                <td><a href="/Booking/BookingStatusCancelled/${item.bookingID}" class="btn btn-outline-dark">İptal Et</a></td>
+                                                </tr>`
+                    });
+                    tablehtml += "</tbody></table>";
+                    $("#bookingList").html(tablehtml);
+                });
+            });
+            
+        </script>
+
+        <h4 class="page-title">Rezervasyon İşlemleri</h4>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card">
+                    <div class="card-header">
+                        <div class="card-title">Kategori Listesi</div>
+                    </div>
+                    <div class="card-body">
+                        <div class="card-sub">
+                            Kategori ile ilgili işlemleri aşağıdan gerçekleştirebilirsiniz.
+                        </div>
+                       <div id="bookingList"></div>
+                        <a href="/Booking/CreateBooking/" class="btn btn-outline-primary">Yeni Rezervasyon Girişi</a>
+                       
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+    </div>
 </div>
 
