--- a/SignalRWebUI/Views/Menu/Index.cshtml
+++ b/SignalRWebUI/Views/Menu/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<ResultProductDto>
+﻿ @model List<ResultProductDto>
 @{
     Layout = null;
 }
@@ -139,14 +139,15 @@
         function showproductid(value){
             var id = value;
             $.ajax({
-                type: 'post',
-                data: { item: id },
+                type: 'post', 
+                data: {item: id },
+               url: "/Menu/AddBasket/" + id,
                 contentType: 'json',
                 success: function () {
-                    swal("Seçilen Ürün:" + id, "Seçiminiz Yaptınız!", "success");
+                    swal("Seçilen Ürün:" + id, "Seçtiğiniz Ürün Sepete Eklendi!", "success");
                 }
             });
-        }
+        } 
 
     </script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
